# Arxetipo

./: .gitignore  .gitmodules  Arxetipo.cpp  CMakeLists.txt  README.md
docs/: index.html
docs/beginner-guide/: 404.html  book.toml  getting-started.html  index.html  print.html  searchindex.js  searchindex.json  users-manual-redirect.html
docs/beginner-guide/getting-started/: hello-cube.html  installation.html
docs/src/beginner-guide/: SUMMARY.md  users-manual-redirect.md
docs/src/beginner-guide/getting-started/: hello-cube.md
docs/src/users-manual/: SUMMARY.md  beginner-guide-redirect.md  book.toml  command-runtime.md  foundations-and-objects.md  foundations-systems-and-components.md
docs/src/users-manual/foundations-and-objects/: component.md  foundation.md  system.md
docs/users-manual/: 404.html  beginner-guide-redirect.html  command-runtime.html  foundations-and-objects.html  foundations-systems-and-components.html  index.html  introduction.html  print.html  renderer.html  searchindex.js  searchindex.json
docs/users-manual/foundations-and-objects/: component.html  foundation.html  system.html
resources/fonts/: Arxephonto.sfd
shaders/: mesh.frag
src/: Arxetipo.cpp  Arxetipo.h  CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/bricks/: game_bricks.cpp  game_bricks.hpp  game_component.hpp  game_scene.hpp  game_system.hpp
src/engine/command/: README.md  command.hpp  command_ast.hpp  command_ast_printer.hpp  command_formatter.hpp  command_kernel.hpp  command_library.hpp  command_objects.cpp  command_objects.hpp  command_parser.hpp  command_runtime.hpp
src/engine/command/command_objects/: command_system.hpp
src/engine/common_objects/: common_objects.cpp  common_objects.hpp  space_transform.hpp
src/engine/helpers/: arx_array_proxy.hpp  arx_logger.hpp  arx_math.hpp  arx_ptr.hpp
src/engine/physics/: physics_objects.cpp  physics_objects.hpp  physx_engine.cpp  physx_engine.hpp
src/engine/physics/physics_objects/: actor_transform_association.hpp  physics_system.hpp  rigid_dynamic_component.hpp  rigid_static_component.hpp
src/engine/physics/physx_engine/: physx_objects.hpp
src/engine/proxy/: renderer_proxy.hpp
src/engine/renderer/: graphics_objects.cpp  graphics_objects.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/engine/renderer/graphics_objects/: graphics_system.hpp  mesh_model_component.hpp  ui_element_component.hpp
src/engine/renderer/vulkan_renderer/: bitmap.hpp  material.hpp  mesh_model.hpp  swapchain.hpp  texture.hpp  ui_element.hpp
src/engine/ui/: ui_objects.cpp  ui_objects.hpp
src/engine/ui/ui_objects/: button.hpp  slider.hpp  text.hpp  typewriter.hpp
src/engine/xr/: openxr_plugin.cpp  openxr_plugin.hpp  xr_objects.cpp  xr_objects.hpp
src/engine/xr/xr_objects/: xr_controller.hpp  xr_grab_interactable.hpp  xr_grab_interactor.hpp  xr_point_interactable.hpp  xr_point_interactor.hpp  xr_system.hpp
src/lab_game/: CMakeLists.txt  CommandTest.cpp  arxemand.cpp
src/scenes/: demo_scene.hpp
